Fix horizontal scrolling

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,4 +1,5 @@
 body#welcome {
+  overflow-x: hidden;
   #navbarColor01 {
     margin-bottom: -14px;
   }
